# dikmax.name-ng

./: .eslintignore  .firebaserc  .gitattributes  .gitignore  .gitmodules  .hlint.yaml  404.md  HLint.hs  LICENSE  README.md  about.md  build.cfg  build.sh  compress.sh  dikmax-name.cabal  firebase.json  gulpfile.js  index.html  index.md  leaflet.html  package-lock.json  package.json  package.yaml  post.html  postcss.config.js  postcss.json  privacy.md  robots.txt  simple.js  stack.yaml
dart/: pubspec.yaml
dart/lib/: app.dart
dart/web/: main.dart
data/: collections.schema.json  collections.yaml  map.json  map.schema.json
favicons/: browserconfig.xml  manifest.json  yandex-widget-manifest.json
map/: rainbow.mss
map/ne_10m_admin_0_countries_lakes/: ne_10m_admin_0_countries_lakes.csv
map/ne_10m_admin_0_map_subunits/: ne_10m_admin_0_map_subunits.csv
map/ne_10m_admin_1_states_provinces_lakes/: ne_10m_admin_1_states_provinces_lakes.csv
posts/2012/: 2012-05-30-first.md  2012-05-30-twomojito.md  2012-05-31-deployment.md  2012-05-31-palms.md  2012-05-31-walking.md  2012-06-02-rain.md  2012-06-02-yasubbotnik.md  2012-06-03-newdesign.md  2012-06-04-lambda.md  2012-06-04-waytooffice.md  2012-06-05-dbbug.md  2012-06-05-onedaylikethis.md  2012-06-05-valtari.md  2012-06-07-echoes.md  2012-06-07-work.md  2012-06-08-tags.md  2012-06-10-devconf.md  2012-06-10-networkhttp.md  2012-06-11-kudohb.md  2012-06-13-itground.md  2012-06-13-russiandictionary.md  2012-06-14-pae.md  2012-06-17-blurredbackground.md  2012-06-17-eclipse.md  2012-06-18-itground2.md  2012-06-18-meondevconf.md  2012-06-19-twomojito2.md  2012-06-21-haskellide.md  2012-06-22-googleplay.md  2012-06-25-hmtl5audio.md  2012-06-25-html5audio.md  2012-06-25-kazantip.md  2012-06-25-musicinmyhead.md  2012-06-26-rackspacecloudfiles.md  2012-06-27-centralizedtesting.md  2012-06-27-chargingkindlefire.md  2012-06-27-googlechrome20.md  2012-06-30-closurecompilererror.md  2012-06-30-googlecats.md  2012-07-02-3mojito.md  (+75 more)
posts/2013/: 2013-01-03-motown.md  2013-01-06-carol-of-the-bells.md  2013-01-09-google-closure-jsdoc-cheat-sheet.md  2013-01-19-svn-revisions-storage.md  2013-01-24-future.md  2013-02-14-mysql-innodb.md  2013-02-15-xhr-contenttype.md  2013-02-16-degu.md  2013-02-22-frontend-dev-conf.md  2013-03-09-frontend-dev-conf-testing.md  2013-03-27-achtundzwanzig.md  2013-03-30-angularjs-controller-parameters.md  2013-04-18-dusseldorf.md  2013-04-21-oopjs-1.md  2013-04-21-oopjs-2.md  2013-05-02-centralized-testing-registration.md  2013-05-11-frontend-dev-conf-video.md  2013-05-22-centralized-testing-meeting.md  2013-05-23-rmkk.md  2013-05-30-oneyear.md  2013-06-04-kahlua.md  2013-06-09-oneyear-contest-end.md  2013-06-19-inscribe-sphere-in-cone.md  2013-06-20-like-minded-persons-found.md  2013-06-23-centralized-testing-thoughts.md  2013-06-24-mysql-as-nosql-database.md  2013-06-27-koto-song.md  2013-06-30-disqus-comments.md  2013-07-02-rip-google-reader.md  2013-07-07-sunday-music.md  2013-07-14-sunday-music-2.md  2013-07-16-lonely-planet.md  2013-07-16-testing-results.md  2013-07-18-interrail.md  2013-07-21-sunday-music-3.md  2013-07-27-sencha-touch-events-debug.md  2013-07-28-sunday-music-4.md  2013-08-04-sunday-music-5.md  2013-08-10-eurotrip.md  2013-08-11-sunday-music-6.md  (+40 more)
posts/2014/: 2014-01-03-sencha-architect.md  2014-01-11-interrail-gift.md  2014-01-19-digitalocean.md  2014-01-27-vps-setup.md  2014-02-06-lowmemorykiller.md  2014-02-14-people-moving-on.md  2014-02-15-riga.md  2014-02-22-dart-again.md  2014-02-26-bying-wristband.md  2014-03-21-route-planner.md  2014-03-25-git-cleanup.md  2014-03-27-neunundzwanzig.md  2014-03-30-route-planner-launch-problems.md  2014-04-07-route-planner-2.md  2014-04-13-vilnius.md  2014-05-07-dusseldorf-2014.md  2014-05-09-potsdam-2014.md  2014-05-10-saxon-switzerland-2014.md  2014-05-25-berlin-2014.md  2014-05-29-tallinn-2014.md  2014-05-30-two-years-contest.md  2014-05-30-two-years.md  2014-06-02-helsinki-2014.md  2014-06-06-store-as-global-variable.md  2014-06-09-spring-break-2014.md  2014-06-11-eurotrip-2014-start.md  2014-06-16-eurotrip-2014-bucharest.md  2014-06-16-eurotrip-2014-chisinau.md  2014-06-18-eurotrip-2014-bran-rasnov-brasov.md  2014-06-19-eurotrip-2014-sighisoara.md  2014-06-20-eurotrip-2014-budapest.md  2014-06-25-eurotrip-2014-bratislava.md  2014-06-26-eurotrip-2014-vienna.md  2014-06-28-eurotrip-2014-graz.md  2014-06-30-eurotrip-2014-zagreb.md  2014-07-02-eurotrip-2014-plitvice-lakes.md  2014-07-03-eurotrip-2014-ljubljana.md  2014-07-04-eurotrip-2014-postojna-skocjan.md  2014-07-05-eurotrip-2014-bled-bohinj.md  2014-07-08-eurotrip-2014-padua.md  (+30 more)
posts/2015/: 2015-01-08-saint-petersburg-and-gatchina.md  2015-01-22-new-year-in-madrid.md  2015-02-02-extjs-viewmodel-forced-update.md  2015-02-08-toledo.md  2015-02-09-braslav.md  2015-02-17-md_proc-0.2.3.md  2015-02-23-lublin-and-majdanek.md  2015-03-13-paris-2015.md  2015-03-18-favicon.md  2015-03-27-dreissig.md  2015-04-08-freiburg.md  2015-04-09-schauinsland.md  2015-04-13-triberg.md  2015-04-16-villingen-schwenningen-and-titisee.md  2015-04-22-one-day-in-schwarzwald.md  2015-04-25-frankfurt-am-main.md  2015-05-07-centralized-testing-2015.md  2015-05-11-rail-and-fly.md  2015-05-21-istanbul.md  (+34 more)
scripts/: main.js  map.js
src/: Binary.hs  Collections.hs  Compress.hs  Config.hs  FileServe.hs  Images.hs  JsonLD.hs  Lib.hs  LucidWriter.hs  Main.hs  Map.hs  Media.hs  Rules.hs  Server.hs  Template.hs  Types.hs
styles/: _about.pcss  _archive.pcss  _fonts.pcss  _footer.pcss  _global.pcss  _header.pcss  _list.pcss  _main.pcss  _map.pcss  _medias.pcss  _mixins.pcss  _navbar.pcss  _post.pcss  _posts-list.pcss  _service.pcss  _sidebar.pcss  _subscribe.pcss  _utils.pcss  _variables.pcss  about.pcss  archive.pcss  likely.css  map.pcss  maplist.pcss  service.pcss  styles.pcss
(+103 files in other folders)
