name:                dikmax-name
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/dikmaxName#readme
license:             BSD3
license-file:        LICENSE
author:              Maxim Dikun
maintainer:          me@dikmax.name
copyright:           2016 Maxim Dikun
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable dikmax.name
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Binary
                     , Lib
                     , LucidWriter
                     , Template
                     , Template.Common
                     , Template.Layout
                     , Template.Navigation
                     , Template.Page.Index
                     , Template.Page.List
                     , Template.Page.Post
                     , Template.PostList
                     , Template.Subscribe
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , binary >= 0.7 && < 0.9
                     , bytestring >= 0.10 && < 0.11
                     , containers >= 0.5 && < 0.6
                     , data-default >= 0.5 && < 0.6
                     , directory >= 1.2 && < 1.3
                     , hashable >= 1.2 && < 1.3
                     , lucid >= 2.9 && < 2.10
                     , mtl >= 2.2 && < 2.3
                     , pandoc >= 1.15 && < 1.16
                     , regex-posix >= 0.95 && < 1.0
                     , shake >= 0.15 && < 0.16
                     , text >= 1.2 && < 1.3
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/dikmax/dikmax.name-ng/
