name:                dikmax-name
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/dikmaxName#readme
license:             BSD3
license-file:        LICENSE
author:              Maxim Dikun
maintainer:          me@dikmax.name
copyright:           2016 Maxim Dikun
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable dikmax.name
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Binary
                     , FileServe
                     , Lib
                     , LucidWriter
                     , Server
                     , Template
                     , Template.Common
                     , Template.Layout
                     , Template.Navigation
                     , Template.Page.Index
                     , Template.Page.List
                     , Template.Page.Post
                     , Template.PostList
                     , Template.Subscribe
  ghc-options:         -threaded -rtsopts "-with-rtsopts=-N -I0 -qg -qb"
  build-depends:       base
                     , binary >= 0.7 && < 0.9
                     , bytestring >= 0.10 && < 0.11
                     , containers >= 0.5 && < 0.6
                     , data-default >= 0.5 && < 0.6
                     , directory >= 1.2 && < 1.3
                     , JuicyPixels >= 3.2 && < 3.3
                     , filepath >= 1.4 && < 1.5
                     , hashable >= 1.2 && < 1.3
                     , lucid >= 2.9 && < 2.10
                     , mtl >= 2.2 && < 2.3
                     , pandoc >= 1.16 && < 1.17
                     , regex-posix >= 0.95 && < 1.0
                     , shake >= 0.15 && < 0.16
                     , snap-core >= 0.9.8 && < 1.0
                     , snap-server >= 0.9.5 && < 1.0
                     , text >= 1.2 && < 1.3
                     , unordered-containers >= 0.2 && < 0.3
                     , utf8-string >= 1.0 && < 1.1
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/dikmax/dikmax.name-ng/
